# argos3-epuck

./: bitly_angstrom_gcc
scripts/: kill_demo.sh  load_all.sh  open.sh  run_demo.sh  upload_jhs.sh
scripts/demos/: collision  wifi
scripts/ssh/: sshd_config
src/cmake/: ARGoSBuildFlags.cmake
src/plugins/robots/e-puck/: Interface.cmake  RealLibrary.cmake
src/plugins/robots/e-puck/control_interface/: ci_epuck_wifi_actuator.h  ci_epuck_wifi_sensor.h
src/plugins/robots/e-puck/real_robot/: real_epuck.cpp  real_epuck.h  real_epuck_base.cpp  real_epuck_base.h  real_epuck_base_leds_actuator.cpp  real_epuck_i2c_device.cpp  real_epuck_i2c_device.h  real_epuck_main.cpp  real_epuck_rgb_leds_actuator.cpp  real_epuck_rgb_leds_actuator.h  real_epuck_wifi_actuator.cpp  real_epuck_wifi_actuator.h  real_epuck_wifi_sensor.cpp  real_epuck_wifi_sensor.h  real_epuck_wifi_transceiver.cpp  real_epuck_wifi_transceiver.h
src/testing/: CMakeLists.txt  jhs.argos  jhs.cpp  jhs.h
src/testing/demos/: CMakeLists.txt  collision.argos  collision.cpp  collision.h  dance.argos  dance.cpp  dance.h  firefly.argos  firefly.cpp  firefly.h  wifi.argos  wifi.cpp  wifi.h
